# benchmark

./: .gitignore  Makefile  README.md  __main__.py  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: learn-github-actions.yml  unit_tests.yml  unittests.yml
downloader/: Dockerfile-downloader  README.md  __main__.py  downloader.py  main.py  requirements.txt  utils.py
img/diagram/: diagram.py
portfolio/: Database.py  Parser.py  Plotter.py  Portfolio.py  Position.py  Ticker.py  es_query_collection.py  utils.py
portfolio/examples/: README.md  portfolio_01.csv  portfolio_02.csv  portfolio_03.csv  portfolio_04.csv  portfolio_05.csv  portfolio_06.csv  portfolio_07.csv  portfolio_08.csv
portfolio/examples/with_errors/: portfolio_01.csv
portfolio/tests/: README.md  test_database.py  test_db.py  test_parser.py  test_portfolio.py  test_position.py  test_ticker.py
portfolio/tests/integration/: test_database.py  test_position.py
portfolio/tests/unit/: test_database.py  test_parser.py  test_portfolio.py  test_position.py  test_ticker.py
