[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
yfinance = "^0.1.70"
elasticsearch = "^7"
elasticsearch-dsl = "^7.4.0"
diagrams = "^0.21.1"
pytest = "^7.1.1"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
